app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-tracker-app
  labels:
    app: fitness-tracker-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fitness-tracker-app
  template:
    metadata:
      labels:
        app: fitness-tracker-app
      annotations:
        ad.datadoghq.com/fitness-tracker-app.logs: >-
          [{"source":"nodejs","service":"fitness-tracker-service"},
           {"source":"nodejs","service":"fitness-tracker-app"}]
    spec:
      containers:
        - name: fitness-tracker-app
          # Your own image (built & pushed to your Docker Hub account)
          image: nanineelapu/fitness-tracker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: fitness-tracker-service
  labels:
    app: fitness-tracker-app
spec:
  selector:
    app: fitness-tracker-app
  ports:
    - port: 80
      targetPort: 5000
  type: LoadBalancer
