httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: fitness-route
  namespace: fitness

spec:
  parentRefs:
  - name: fitness-gateway

  rules:
  - backendRefs:
    - name: fitness-tracker-service
      port: 80
